commit-10: Added support for file upload
